@@ -1,7 +1,8 @@
 rkward (0.6.0z+0.6.1-0devel1) unstable; urgency=low
 
   * new upstream release
-
+  * make sure to include CPPFLAGS and LDFLAGS in call to cmake
+  
  -- Thomas Friedrichsmeier <tfry@users.sourceforge.net>  Wed, 24 Oct 2012 15:35:00 +0200
 
 rkward (0.6.0-1) unstable; urgency=low
